--- a/style.css
+++ b/style.css
@@ -329,8 +329,10 @@ body {
     font-size: 30px;
     font-weight: 500;
     line-height: 1.2;
-    color: white;
+    color: rgb(81, 201, 220);
     background: url(./images/back.png) no-repeat right;
+    width: 100%;
+    min-height: 100vh;
     background-size: cover;
 }
 
@@ -348,11 +350,13 @@ body {
 
 .calculator_block {
     margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 2%;
     background: rgb(26, 26, 40);
-    height: 595px;
+    height: fit-content;
     width: 400px;
     padding: 20px;
+    border-radius: 3px;
+    box-shadow: 0 0 20px rgba(26, 26, 40, 0.309);
 }
 
 .calculator_text {
@@ -379,16 +383,16 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: 1.2;
-    color: white;
+    color: rgb(81, 201, 220);
     font-size: 30px;
 }
 
 .calculator_buttons {
-    height: 430px;
+    height: 500px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     row-gap:13px;
     column-gap: 18px;
     
@@ -398,25 +402,66 @@ body {
     display: block;
     border: none;
     font-family: 'Spartan';
-    font-style: normal;
-    font-weight: 500;
+    font-style: bold;
+    font-weight: 700;
     background: rgb(30, 36, 52);
-    color: white;
+    color: rgb(81, 201, 220);
     font-size: 30px;
     line-height: 1.2;
     border-radius: 7px;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
+}
+
+.calculator_button:hover {
+    background: rgb(81, 201, 220);
+    color: rgb(30, 36, 52);
+}
+
+.calculator_button:active {
+    -moz-transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    -o-transform: scale(0.9);
 }
 
 .theme {
     background: rgb(81, 201, 220);
+    color: rgb(30, 36, 52);
+}
+
+.theme:hover {
+    background: rgb(30, 36, 52);
+    color: rgb(81, 201, 220);
+}
+
+.header_calc {
+
 }
 
 .sign {
     display: block;
     position: absolute;
-    left: 20px;
-    top: 20px;
+    left: 4%;
+    top: 4%;
     font-size: 10px;
     text-decoration: none;
     color: rgb(26, 26, 40);
+    background: rgb(172, 210, 220);
+    padding: 20px;
+}
+
+.plus {
+    grid-row: span 2;
+}
+
+.calculator_link {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.calc_link-img {
+    width: 80%;
+    height: auto;
 }
