--- a/style.css
+++ b/style.css
@@ -335,6 +335,9 @@ body {
     min-height: 100vh;
     background-size: cover;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* timer of moz for links on hover/active/focus */
@@ -350,7 +353,6 @@ body {
 */
 
 .calculator_block {
-    margin: 0 auto;
     margin-top: 2%;
     background: rgb(26, 26, 40);
     height: fit-content;
@@ -401,6 +403,8 @@ body {
 .calculator_button {
     display: block;
     border: none;
+    min-width: 72px;
+    min-height: 72px;
     font-family: 'Spartan';
     font-style: bold;
     font-weight: 700;
